--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 1rem;
 }
@@ -7,10 +7,10 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.card {
-  padding: 2em;
+/* .card {
+  padding: 1em;
 }
 
 .read-the-docs {
   color: #888;
-}
+} */
